--- a/covid-19/CSS/app.css
+++ b/covid-19/CSS/app.css
@@ -51,6 +51,12 @@ body{
     bottom: 10vh;
 }
 
+.scroll-links-three{
+    position: absolute;
+    left: 280px;
+    bottom: 10vh;
+}
+
 .scroll-links a, .scroll-links-two a{
    margin-right: 5px;
 }
@@ -249,15 +255,22 @@ body{
     .scroll-links{
         position: absolute;
         left: 25px;
-        bottom: 20vh;
+        bottom: 25vh;
     }
     
     .scroll-links-two{
         position: absolute;
         left: 25px;
-        bottom: 10vh;
+        bottom: 15vh;
     }
     
+    .scroll-links-three{
+        position: absolute;
+        left: 25px;
+        bottom: 5vh;
+    }
+
+
     
     .dropbtn{
         color: rgb(255, 255, 255)!important;
@@ -282,6 +295,11 @@ body{
 @media screen and (max-width:450px){
 
 
+    .linkSecondaryButton{
+      font-size: 12px;
+    }
+    
+
     #career-heading-new .cover-1{
         width: 100%;
         height: 100%;
@@ -292,7 +310,7 @@ body{
         justify-content: center;
         text-align: left;
     
-        background-color: rgba(255, 255, 255, 0.636);
+        background-color: rgba(255, 255, 255, 0.336);
         font-size: 2.2rem;
     }
 
