--- a/covid-19/CSS/emer.css
+++ b/covid-19/CSS/emer.css
@@ -90,5 +90,10 @@
         margin-left: 25px;
         /* padding: 25px 0; */
     }
+
+    .emerg .card{
+        width: 85%;
+    }
+    
     
 }
