--- a/covid-19/CSS/app.css
+++ b/covid-19/CSS/app.css
@@ -354,8 +354,26 @@ body{
         margin-top: 250px;
     }
 
+    #career-heading-new .cover-1 h2{
+        width: 100%;
+        text-align: left;
+        padding: 0 5%;
+        font-size: 1.3em!important;
+        color: #000;
+    }
+    
+    #career-heading-new .cover-1 p{
+        padding: 0 5%;
+        margin-top: 20px;
+        width: 100%;
+        text-align: left;
+        font-size: .5em;
+        color: #000;
+    }
+
+
     h2{
-        font-size: 2em!important;
+        font-size: 1.8em!important;
     }
 
 }
