--- a/covid-19/CSS/vacc.css
+++ b/covid-19/CSS/vacc.css
@@ -119,7 +119,8 @@
     }
     
     .vaccine .how-image img{
-        width: 100%;
+        height: 300px;
+        width: unset;
     }
     
     .vaccine .vaccine-text{
