--- a/covid-19/CSS/app.css
+++ b/covid-19/CSS/app.css
@@ -142,7 +142,7 @@ body{
     justify-content: flex-start;
     text-align: center;
 
-    background-image: url(../1.webp);
+    background-image: url(../OG\ –\ 1\ \(1\).webp);
     /* background-position: top center; */
     background-repeat: no-repeat;
     background-size: cover;
