--- a/covid-19/CSS/app.css
+++ b/covid-19/CSS/app.css
@@ -88,7 +88,7 @@ body{
     outline: none;
     color: #fff;
     border: 2px solid rgb(255, 255, 255);
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(255, 255, 255, 1);
     transition: .2s ease-in-out 0s;
     font-weight: 500;
 }
@@ -99,6 +99,10 @@ body{
     color: #000;
     cursor: pointer;
     background-color: #fff;
+}
+
+.background-trans{
+    background-color: rgba(255, 255, 255, 0)!important;
 }
 
 .dropbtn{
