--- a/covid-19/CSS/emer.css
+++ b/covid-19/CSS/emer.css
@@ -87,7 +87,7 @@
 @media screen and (max-width:768px) {
     
     .emerg-to-heading{
-        margin-left: 25px;
+        /* margin-left: 25px; */
         /* padding: 25px 0; */
     }
 
