--- a/covid-19/CSS/app.css
+++ b/covid-19/CSS/app.css
@@ -61,7 +61,7 @@ body{
    margin-right: 5px;
 }
 
-/* .secondary-dark-button{
+.secondary-dark-button{
     border: 2px solid rgb(0, 67, 129)!important;
     color: rgb(0, 67, 129)!important;
     font-weight: 500!important;
@@ -70,7 +70,7 @@ body{
 .secondary-dark-button:hover{
     color: #fff!important;
     background-color: rgb(0, 67, 129)!important;
-} */
+}
 
 .linkSecondaryButton{
 
